<resources>
    <string name="app_name">QuizApp</string>
    <string name="question">Question</string>
    <string name="mathematics">Mathematics</string>
    <string name="question_one_mathematics">QuestionOne</string>
    <string name="mathematics_check_box1">CheckBox1</string>
    <string name="mathematics_check_box2">CheckBox2</string>
    <string name="mathematics_check_box3">CheckBox3</string>
    <string name="mathe_btn_nex">Next</string>
    <string name="history">History</string>
    <string name="question_one_history">QuestionOne</string>
    <string name="history_check_box1">CheckBox1</string>
    <string name="history_check_box2">CheckBox2</string>
    <string name="history_check_box3">CheckBox3</string>
    <string name="hist_btn_nex">Next</string>
    <string name="geography">Geography</string>
    <string name="question_one_geography">QuestionOne</string>
    <string name="geography_check_box1">CheckBox1</string>
    <string name="geography_check_box2">CheckBox2</string>
    <string name="geography_check_box3">CheckBox3</string>
    <string name="geo_btn_nex">Next</string>
    <string name="next">NEXT</string>
    <string name="api">Api</string>
</resources>
